Add bcrypt and faker

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "\"ckopecky\" <kopecky12112@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
     "sqlite3": "^4.1.0"
