--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -15,5 +16,11 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "rb": "knex migrate:rollback",
+    "latest": "knex migrate:latest"
   }
 }
